# gorl

./: .gitignore  Cargo.toml  LICENSE.md  settings.ini  settings.ron
src/: common.rs  control_window.rs  highlighter.rs  lineview.rs  main.rs  main_window.rs  search.rs  settings.rs  utils.rs
