[package]
name = "gorl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.1"
winsafe = { git = "https://github.com/rodrigocfd/winsafe.git", features = ["gui", "dwm"] }
log = "0.4.20"
config = "0.13.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_derive = "1.0.192"
lazy_static = "1.4.0"
grep = "0.2.12"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "tracing", "time"] }
flume = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
memory-stats = "1.1.0"
humansize = "2.1.3"
windows = { version = "0.52.0", features = ["Win32_UI_Controls", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_Graphics_Dwm"] }
windows-sys = { version = "0.52.0", features = ["Win32_UI_Controls", "Win32_Foundation", "Win32_System_LibraryLoader"] }
once_cell = "1.18.0"

[profile.prod]
inherits = "release"
lto = true
codegen-units = 1