[package]
name = "gorl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.1"
log = "0.4.20"
config = "0.13.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_derive = "1.0.192"
lazy_static = "1.4.0"
grep = "0.2.12"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
memory-stats = "1.1.0"
humansize = "2.1.3"
once_cell = "1.18.0"
tempfile = "3.8.1"
bitpacking = "0.9.2"
fltk = { version = "1.5.7", features = ["fltk-bundled"] }
fltk-theme = "0.7.5"

[profile.prod]
inherits = "release"
lto = true
codegen-units = 1
